[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/Characters/Chick_Down.png" type="Texture" id=1]
[ext_resource path="res://src/Actors/Chicken/Chicken.gd" type="Script" id=6]
[ext_resource path="res://src/Actors/Chicken/ViewRadius.gd" type="Script" id=7]

[sub_resource type="CapsuleShape2D" id=2]
radius = 6.97882
height = 4.10973

[sub_resource type="CircleShape2D" id=3]

[node name="Chicken" type="KinematicBody2D" groups=[
"prey",
]]
collision_mask = 8
script = ExtResource( 6 )
avoid_distance = 30.0

[node name="Chick_Down" type="Sprite" parent="."]
position = Vector2( 0.0284538, -0.238901 )
scale = Vector2( 0.251141, 0.251711 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 1.19361 )
shape = SubResource( 2 )

[node name="FlockView" type="Area2D" parent="."]
monitorable = false
collision_layer = 0

[node name="ViewRadius" type="CollisionShape2D" parent="FlockView"]
shape = SubResource( 3 )
script = ExtResource( 7 )
[connection signal="body_entered" from="FlockView" to="." method="_on_FlockView_body_entered"]
[connection signal="body_exited" from="FlockView" to="." method="_on_FlockView_body_exited"]
